# spatialite

./: changelog  control  libspatialite2.install  makefile.vc  rules  spatialite-bin.examples  spatialite_2.4.0~rc4.orig.tar.gz.delta  spatialite_2.4.0~rc4.orig.tar.gz.id  spatialite_3.0.0~beta20110817.orig.tar.gz.delta  spatialite_3.0.0~beta20110817.orig.tar.gz.id  spatialite_3.1.0~rc2.orig.tar.gz.delta  spatialite_4.0.0.orig.tar.gz.delta  spatialite_4.0.0.orig.tar.gz.id  spatialite_4.0.0~rc1.orig.tar.gz.delta  spatialite_4.0.0~rc1.orig.tar.gz.id  spatialite_4.1.1.orig.tar.gz.delta  spatialite_4.1.1.orig.tar.gz.id  spatialite_4.2.0.orig.tar.gz.delta  spatialite_4.2.0.orig.tar.gz.id  spatialite_4.2.0~rc1.orig.tar.gz.delta  spatialite_4.2.0~rc1.orig.tar.gz.id  spatialite_4.2.1~rc0.orig.tar.gz.delta  spatialite_4.2.1~rc0.orig.tar.gz.id  spatialite_4.2.1~rc1.orig.tar.gz.delta  spatialite_4.2.1~rc1.orig.tar.gz.id  spatialite_4.3.0.orig.tar.gz.delta  spatialite_4.3.0.orig.tar.gz.id  spatialite_4.3.0a.orig.tar.gz.delta  spatialite_4.3.0a.orig.tar.gz.id  spatialite_4.3.0~rc0.orig.tar.gz.delta  spatialite_4.3.0~rc0.orig.tar.gz.id  spatialite_4.3.0~rc1.orig.tar.gz.delta  spatialite_4.3.0~rc1.orig.tar.gz.id  spatialite_4.4.0~rc0+20160424-f73a4c7295+1.orig.tar.gz.delta  spatialite_4.4.0~rc0+20160424-f73a4c7295+1.orig.tar.gz.id  spatialite_4.4.0~rc0+20160424-f73a4c7295.orig.tar.gz.delta  spatialite_4.4.0~rc0+20160424-f73a4c7295.orig.tar.gz.id  spatialite_4.4.0~rc0.orig.tar.gz.delta  spatialite_4.4.0~rc0.orig.tar.gz.id  spatialite_4.4.0~rc1.orig.tar.gz.delta  (+4 more)
debian/: NEWS  NEWS.Debian  changelog  clean  control  copyright  libspatialite-dev.install  libspatialite-dev.lintian-overrides  libspatialite1.install  libspatialite2.install  libspatialite2.symbols  libspatialite3.symbols  libspatialite5-dbg.lintian-overrides  libspatialite5.lintian-overrides  libspatialite5.symbols  libspatialite6.symbols  libspatialite7.lintian-overrides  libspatialite7.symbols  libsqlite3-mod-spatialite.lintian-overrides  mod-spatialite6.lintian-overrides  rules  spatialite-bin.install  watch
debian/patches/: 00-add_automake_foreign.patch  00-systemlibs.patch  01-add_missing_linkage.patch  01-fix_local_build.patch  02-fix_version-info.patch  03-fix_typos.patch  03-link-m.patch  04-fix_missing_define.patch  05-dont_relink.patch  05-fix_libgeos_search.patch  06-fix_soname.patch  06-freexl_compat.patch  07-fix_spatialite_pc.patch  10-automake-subdir-objects.patch  11-link-libxml2.patch  12-link-pthread.patch  13-succesfully-typo.patch  14-soversion.patch  liblwgeom-2.2.0.patch  occurrence-typo.patch  series  soversion.patch  spelling-errors.patch
debian/upstream/: metadata
libspatialite/: Makefile.in  configure  spatialite.c  sqlite3.c
patches/: series  split.diff  tools.diff
spatialite-tools/: Makefile-static-Linux  Makefile-static-MacOsX  Makefile-static-MinGW  Makefile.am  Makefile.in  README  configure  configure.ac  exif_loader.c  makefile.vc  nmake.opt  shapefiles.c  shell.c  shp_doctor.c  spatialite_gml.c  spatialite_network.c  spatialite_osm.c  spatialite_osm_filter.c  spatialite_osm_map.c  spatialite_osm_net.c  spatialite_osm_raw.c  spatialite_tool.c
src/versioninfo/: version.c
